# gh-workflows

./: main.py  pyproject.toml
.github/: workflows
.github/workflows/: default  python-app.yml
test/: test_dummy.py
