[tool.poetry]
name = "gh-workflows"
version = "0.1.0"
description = ""
authors = ["Nicolas Pozas <pozas91@gmail.com>"]
readme = "README.md"
packages = [{include = "gh_workflows"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
